# todo-or-not

./: .gitignore  .todo-ignore  README.md  action.yml  cov.json  cov.lcov  example.py  generate_issues.py  localize.json  package-lock.json  package.json  pyproject.toml  testing.js  todo_check.py
.github/: dependabot.yaml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: default.md  documentation.md  localization.md  patch.md
.github/workflows/: pypi-publish-prod.yml  pypi-publish-test.yml  python-publish.yml  test-suite.yml  test-with-pytest.yml  testing.yml  todoon-fail.yml  todoon-issues-prod.yml  todoon-issues-test.yml  todoon-issues.yml  todoon.yml
.run/: CMD todoon.run.xml  Python tests in tests.run.xml  SEMVER increment minor.run.xml  SEMVER increment patch.run.xml
scripts/: _check_localizations.py  _update_versions.py  test.env
tests/: test_auxillary_functions.py  test_file_io.py  test_find_lines.py  test_github_issues.py  test_todo_grammar.py  test_todo_hit.py  test_todoignore_util.py  test_todoon.py
tests/a/b/c/d/e/f/: deep_todo.txt
tests/a/b/y/: shallow_todo.txt
tests/resources/: broken.donotopen  example.py  example.txt  reallybroken.donotopen  utf-8.txt
tests/resources/closed_issue/: closed_issue.py  closed_issue.txt
tests/resources/existing_issues/: existing_issues.py
tests/resources/multilanguage/: example.cpp  example.mal  example.py  example.sql
tests/resources/no_todos/: .todo-ignore  safe.txt
tests/resources/plural/: plural.py  plural.txt
tests/resources/singular/: singular.java  singular.txt
tests/resources/specific_files/: r.py  r.txt
tests/resources/specific_files/s/: t.txt
tests/resources/todoignore_util_dir/: .todo-ignore
tests/resources/wildcard_test/: .todo-ignore
todo_or_not/: __init__.py  lex.py  localize.py  parser.out  parsetab.py  todo_app.py  todo_check.py  todo_grammar.py  todo_hit.py  utility.py  yacc.py
todo_or_not_startout/: todo_check.py
