[tool.poetry]
name = "todo-or-not"
version = "0.7.10-beta"
description = "#todoon integrates the TODOs in your codebase with your GitHub repository"
authors = ["TrentonYo <trentonyo@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["todo", "github"]
homepage = "https://github.com/apps/todo-or-not"
repository = "https://github.com/Start-Out/todo-or-not"
documentation = "https://github.com/Start-Out/todo-or-not/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
typing-extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todoon = "todo_or_not:todo_check.typer_main"
